[package]
name = "classroom-helper"
version = "0.1.0"
authors = ["Jiajie Chen <noc@jiegec.ac.cn>"]
edition = "2018"

[dependencies]
csv = "1.1.6"
clap = "2.33.3"
serde_json = "1.0.66"
fs_extra = "1.2.0"
config = "0.11.0"
crossterm = "0.20.0"
tui = { version = "0.16.0", default-features = false, features = ['crossterm'] }
threadpool = "1.8.1"
unicode-width = "0.1.8"
chrono = "0.4.19"
